--- a/client.css
+++ b/client.css
@@ -3,7 +3,7 @@
     align-items: center;
     justify-content: center;
 }
-.title-container{
+.text-container{
     display: flex;
     /* align-items: center; */
     justify-content: center;
